# SmartWalletFX

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTOMATIC_FILE_WATCHING.md  CONTRIBUTING.md  MIGRATE_TEST_SUITE.md  Makefile  README.md  TESTING.md  TODO.md  conftest.py  docker-compose.ci.yml  docker-compose.db.yml  docker-compose.e2e.yml  docker-compose.test.yml  docker-compose.yml  fixture_audit_report.json  package-lock.json  pytest.ini  run_cicd_backend.sh  tasks.md  test-coverage.md  test_suite_restructure.md  test_suite_restructure_creative.md
backend/: .env.example  .flake8  Dockerfile  Makefile  PHASE6_SUMMARY.md  alembic.ini  docker-compose.test.yml  locustfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
backend/app/: celery_app.py  di.py  di_container.py  main.py
backend/app/abi/: aave_v2_abi.py  compound_v2_abi.py  radiant_v2_abi.py
backend/app/adapters/: defi_position.py  radiant_contract_adapter.py
backend/app/aggregators/: protocol_aggregator.py
backend/app/api/: __init__.py  api.py  dependencies.py
backend/app/cli/: db_backup_cli.py
backend/app/constants/: radiant.py
backend/app/core/: __init__.py  celery.py  config.py  database.py  error_handling.py  init_db.py  logging.py  middleware.py  prometheus.py  services.py  settings_service.py
backend/app/domain/: __init__.py  errors.py
backend/app/models/: __init__.py  aggregate_metrics.py  audit_log.py  email_verification.py  group.py  historical_balance.py  oauth_account.py  password_reset.py  portfolio_snapshot.py  portfolio_snapshot_cache.py  refresh_token.py  token.py  token_balance.py  token_price.py  transaction.py  user.py  wallet.py  wallet_group.py
backend/app/monitoring/: __init__.py
backend/app/repositories/: __init__.py  aggregate_metrics_repository.py  audit_log_repository.py  email_verification_repository.py  historical_balance_repository.py  oauth_account_repository.py  password_reset_repository.py  portfolio_snapshot_repository.py  refresh_token_repository.py  token_balance_repository.py  token_price_repository.py  token_repository.py  user_repository.py  user_repository_di.py  wallet_repository.py
backend/app/schemas/: __init__.py  audit_log.py  auth_roles.py  auth_token.py  defi.py  defi_aggregate.py  defi_dashboard.py  error.py  historical_balance.py  jwks.py  jwt.py  password_reset.py  portfolio_metrics.py  portfolio_timeline.py  token.py  token_balance.py  token_price.py  user.py  wallet.py
backend/app/services/: auth_service.py  blockchain_service.py  data_analysis_service.py  defi_aggregation_service.py  email_service.py  file_upload_service.py  oauth_service.py  portfolio_service.py  snapshot_aggregation.py
backend/app/storage/: __init__.py  base.py  s3.py
backend/app/stores/: historical_balance_store.py  portfolio_snapshot_store.py  token_balance_store.py  token_price_store.py  token_store.py  wallet_store.py
backend/app/tasks/: backups.py  jwt_rotation.py  snapshots.py
backend/app/tests/: conftest.py
backend/app/usecase/: audit_log_usecase.py  auth_usecase.py  defi_aave_usecase.py  defi_compound_usecase.py  defi_radiant_usecase.py  email_verification_usecase.py  historical_balance_usecase.py  jwks_usecase.py  oauth_usecase.py  portfolio_aggregation_usecase.py  portfolio_snapshot_usecase.py  token_balance_usecase.py  token_price_usecase.py  token_usecase.py  user_profile_usecase.py  wallet_usecase.py
backend/app/utils/: alerting.py  audit.py  db_backup.py  encryption.py  jwks_cache.py  jwt.py  jwt_keys.py  jwt_rotation.py  logging.py  metrics.py  oauth_state_cache.py  rate_limiter.py  security.py  token.py
backend/app/validators/: audit_validator.py  security.py
backend/docs/: TESTING_GUIDE.md  TESTING_MIGRATION_GUIDE.md
backend/fixture_lint/: __init__.py  cli.py  duplication.py  refactor.py  report.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_init.py  0002_add_portfolio_snapshot_cache_table.py  0003_rename_password_hash_to_hashed_password.py  0004_add_refresh_tokens_table.py  0005_wallet_schema_updates.py  0006_add_aggregate_metrics_table.py  0007_add_created_at_and_updated_at_to_.py  0008_add_rbac_abac_fields.py  0009_add_audit_logs_table.py  0009_add_email_verification.py  0010_update_uuid_columns_and_wallets.py  0011_add_email_verification_fields.py  0011_add_password_reset_table.py  0012_add_oauth_accounts_table.py  0013_add_email_verification.py  0013_add_verification_tokens.py  0014_add_user_profile_fields.py  04075fb91280_init.py  62719eef5af2_add_portfolio_snapshot_cache_table.py  e3b4b2590bda_rename_password_hash_to_hashed_password.py
backend/requirements/: base.txt  dev.txt  perf.txt  s3.txt
backend/scripts/: check_locust_fail_ratio.py  delete_all_users.py  script_arbitrum_contract.py  test_arbitrum_contract.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/e2e/: README.md  test_backup_restore_e2e.py  test_performance.py
backend/tests/fixtures/: __init__.py  auth.py  base.py  client.py  config.py  core.py  database.py  deduplicated.py  di_container.py  endpoints.py  init.sql  large_dataset.sql  mocks.py  portfolio_metrics.py  repositories.py  services.py  test_data.py  usecase.py  usecases.py
backend/tests/integration/: test_auth.py  test_defi_aave_endpoint.py  test_defi_aggregate_endpoint.py  test_defi_compound_endpoint.py  test_defi_portfolio_endpoint.py  test_defi_radiant_endpoint.py  test_defi_timeline_endpoint.py  test_error_handling.py  test_health_endpoint.py  test_snapshots.py  test_snapshots_endpoints.py  test_timeline_dynamic_aggregator.py  test_timeline_dynamic_aggregator_endpoints.py  test_wallet.py  test_wallets_endpoint.py
backend/tests/performance/: conftest.py  test_auth_constant_time.py  test_bcrypt_rounds.py  test_jwt_perf.py
backend/tests/plugins/: __init__.py  audit_validator.py  property_templates.py
backend/tests/property/: __init__.py  strategies.py  test_timeline_response.py
backend/tests/shared/: test_enhanced_mocks_package.py
backend/tools/: migrate_tests.py
(+929 files in other folders)
