[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pip>=20.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "smartwalletfx"
version = "0.1.0"
description = "A wallet tracking application for EVM chains"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "web3>=6.11.3",
    "aiohttp>=3.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "pytest-env==1.1.1",
    "pytest-mock==3.12.0",
    "httpx==0.25.1",
    "coverage==7.3.2",
    "ruff==0.1.5",
    "mypy==1.7.0",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==7.2.0",
    "types-requests==2.31.0.10",
    "types-python-jose==3.3.4.8",
    "types-passlib==1.7.7.13",
    "bandit==1.7.5",
    "safety==3.2.11",
    "detect-secrets==1.4.0",
    "pip-audit==2.6.1",
    "mkdocs==1.5.3",
    "mkdocs-material==9.4.8",
    "pre-commit==3.5.0",
    "debugpy==1.8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.flake8]
exclude = [
    "venv",
    "venv/*",
    ".venv",
    ".venv/*",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "tests/"
]
max-line-length = 79
extend-ignore = ["E203"]

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true 